# cobib

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .pydocstylerc  .pylintdict  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  _cobib  _crema  cobib.1  config.ini  crema  debug.ini  default.ini  dev-requirements.txt  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
cobib/: __init__.py  __main__.py  cobib.py  config.py  database.py  logging.py  parser.py  zsh_helper.py
cobib/commands/: __init__.py  add.py  base_command.py  delete.py  edit.py  export.py  init.py  list.py  modify.py  open.py  redo.py  remove.py  search.py  show.py  undo.py
cobib/config/: __init__.py  config.py  example.py
cobib/database/: __init__.py  database.py  entry.py
cobib/docs/: debug.ini  default.ini  example.ini
cobib/parsers/: __init__.py  arxiv.py  base_parser.py  bibtex.py  doi.py  isbn.py  yaml.py
cobib/tui/: __init__.py  buffer.py  frame.py  state.py  tui.py
crema/: __init__.py  __main__.py  crema.py  parser.py  zsh_helper.py
crema/docs/: debug.ini  default.ini
docs/: make.py
docs/jinja/: custom.css  module.html.jinja2  syntax-highlighting.css  theme.css
html/: index.html.jinja2  module.html.jinja2
plugin/: LICENSE.txt  README.md  pyproject.toml
plugin/src/cobib_dummy/: __init__.py  dummy_command.py  dummy_exporter.py  dummy_importer.py  dummy_parser.py
plugin/src/cobib_dummy/man/: __init__.py  cobib-dummy-exporter.7.md  cobib-dummy-importer.7.md  cobib-dummy-parser.7.md  cobib-dummy.1.md  cobib-plugin-dummy.7.md
plugin/tests/: __init__.py  debug.py  test_dummy_command.py  test_dummy_exporter.py  test_dummy_importer.py  test_dummy_parser.py  test_manual.py  testing.yaml
src/cobib/: __init__.py  __main__.py  logging.py  zsh_helper.py
src/cobib/commands/: __init__.py  add.py  base_command.py  delete.py  edit.py  export.py  git.py  import_.py  init.py  lint.py  list.py  list_.py  man.py  modify.py  note.py  open.py  redo.py  review.py  search.py  show.py  tutorial.py  undo.py  unify_labels.py
src/cobib/config/: __init__.py  command.py  config.py  event.py  example.py
src/cobib/database/: __init__.py  author.py  database.py  entry.py
src/cobib/exporters/: __init__.py  base_exporter.py  bibtex.py  yaml.py  zip.py
src/cobib/importers/: __init__.py  base_importer.py  bibtex.py  yaml.py  zotero.py
src/cobib/man/: .gitignore  Van_Noorden_2014.txt  __init__.py  base.txt  cobib-add.1.md  cobib-arxiv.7.md  cobib-bibtex.7.md  cobib-commands.7.md  cobib-config.5.md  cobib-database.7.md  cobib-delete.1.md  cobib-doi.7.md  cobib-edit.1.md  cobib-event.7.md  cobib-export.1.md  cobib-exporters.7.md  cobib-filter.7.md  cobib-getting-started.7.md  cobib-git.1.md  cobib-git.7.md  cobib-import.1.md  cobib-importers.7.md  cobib-init.1.md  cobib-isbn.7.md  cobib-lint.1.md  cobib-list.1.md  cobib-man.1.md  cobib-man.7.md  cobib-modify.1.md  cobib-note.1.md  cobib-open.1.md  (+20 more)
test/: __init__.py  cmdline_test.py  debug.py  dummy_multi_file_entry.bib  dummy_scrolling_entry.bib  example_duplicate_entry.bib  example_duplicate_entry.yaml  example_entry.bib  example_entry.yaml  example_entry_unescaped.bib  example_literature.yaml  scrolling_database.yaml  test_cobib.py  test_commands.py  test_config.py  test_crema.py  test_database.py  test_logging.py  test_main.py  test_parser.py  test_parsers.py  test_tui.py  test_zsh_helper.py
test/commands/: command_test.py  example_multi_file_entry.yaml  test_add.py  test_delete.py  test_edit.py  test_export.py  test_init.py  test_list.py  test_modify.py  test_open.py  test_redo.py  test_search.py  test_show.py  test_undo.py
test/config/: broken_config.py  test_config.py
test/database/: test_database.py  test_entry.py
test/parsers/: parser_test.py  test_arxiv.py  test_bibtex.py  test_doi.py  test_isbn.py  test_yaml.py
test/tui/: mock_curses.py  mock_tui.py  test_buffer.py  test_frame.py  test_state.py  test_tui.py  tui_test.py
tests/: __init__.py  cmdline_test.py  debug.py  example_entry.bib  example_entry.yaml  example_literature.bib  example_literature.yaml  test_logging.py  test_main.py  test_zsh_helper.py
tests/commands/: __init__.py  command_test.py  disambiguation_entry.yaml  example_duplicate_entry.bib  example_duplicate_entry.yaml  example_multi_file_entry.bib  example_multi_file_entry.yaml  note_database.yaml  notes_database.yaml  test_add.py  test_delete.py  test_edit.py  test_export.py  test_git.py  test_git_commit_event.py  test_import.py  test_init.py  test_lint.py  test_list.py  test_man.py  test_modify.py  test_note.py  test_open.py  test_redo.py  test_review.py  test_search.py  test_show.py  test_tutorial.py  test_undo.py  test_unify_labels.py  unifying_database.yaml
tests/config/: __init__.py  broken_config.py  legacy_config.ini  test_command.py  test_config.py  test_event.py
tests/database/: __init__.py  disambiguation_database.yaml  example_entry_author_format_biblatex.yaml  example_entry_author_format_yaml.yaml  example_entry_umlaut.bib  example_entry_umlaut.yaml  test_author.py  test_database.py  test_entry.py
tests/exporters/: __init__.py  exporter_test.py  test_bibtex.py  test_yaml.py  test_zip.py
tests/importers/: __init__.py  bibtex_database.bib  bibtex_database.yaml  importer_test.py  test_bibtex.py  test_yaml.py  test_zotero.py  zotero_database.yaml
tests/man/: __init__.py  test_manual.py
tests/parsers/: __init__.py  parser_test.py  test_arxiv.py  test_bibtex.py  test_doi.py  test_isbn.py  test_url.py  test_yaml.py
tests/tui/: __init__.py  mock_curses.py  mock_tui.py  scrolling_database.yaml  test_buffer.py  test_frame.py  test_state.py  test_tui.py  tui_test.py
tests/ui/: __init__.py
tests/utils/: __init__.py  expected_changelog_printing.md  expected_changelog_printing.txt  fixed_database.yaml  linting_database.yaml  test_diff_renderer.py  test_file_downloader.py  test_journal_abbreviations.py  test_logging.py  test_rel_path.py  test_shell_helper.py  unified_database.yaml  unifying_database.yaml
(+68 files in other folders)
