[metadata]
name = cobib
version = attr: cobib.__version__
author = Max Rossmannek
author_email = max.rossmannek@uzh.ch
description = Console Bibliography
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT License
url = https://gitlab.com/mrossinek/cobib
project_urls =
    Bug Tracker = https://gitlab.com/mrossinek/cobib/-/issues
    Documentation = https://mrossinek.gitlab.io/cobib/cobib.html
keywords =
    reference-manager, citation-manager, bibliography, cli, tui, command-line,
    terminal, console, bibtex, doi, arxiv, isbn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Environment :: Console :: Curses
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7

[options.package_data]
cobib = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cobib = cobib.__main__:main
