[metadata]
name = cobib
version = attr: cobib.__version__
author = Max Rossmannek
author_email = max.rossmannek@uzh.ch
description = Console Bibliography
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT License
url = https://gitlab.com/cobib/cobib
project_urls =
    Bug Tracker = https://gitlab.com/cobib/cobib/-/issues
    Documentation = https://cobib.gitlab.io/cobib/cobib.html
keywords =
    reference-manager, citation-manager, bibliography, cli, tui, command-line,
    terminal, console, bibtex, doi, arxiv, isbn
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Environment :: Console
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8

[options.package_data]
cobib = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cobib = cobib.__main__:_main
