[build-system]
requires = [
    "setuptools>=77",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "cobib_dummy"
authors = [
    {name = "Max Rossmannek", email = "max@rossmannek.de"},
]
description = "Console Bibliography Dummy Plugin"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = [
    "cobib",
]
dynamic = ["version", "readme"]

[project.entry-points."cobib.commands"]
dummy = "cobib_dummy.dummy_command:DummyCommand"

[project.entry-points."cobib.exporters"]
dummy = "cobib_dummy.dummy_exporter:DummyExporter"

[project.entry-points."cobib.importers"]
dummy = "cobib_dummy.dummy_importer:DummyImporter"

[project.entry-points."cobib.parsers"]
dummy = "cobib_dummy.dummy_parser:DummyParser"

[project.entry-points."cobib.man"]
"cobib-dummy.1" = "cobib_dummy.man:P_plugin"
"cobib-dummy-exporter.7" = "cobib_dummy.man:E_exporters"
"cobib-dummy-importer.7" = "cobib_dummy.man:I_importers"
"cobib-dummy-parser.7" = "cobib_dummy.man:P_parsers"
"cobib-plugin-dummy.7" = "cobib_dummy.man:A_overview"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "cobib_dummy.__version__"}

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.package-data]
cobib_dummy = ["py.typed"]
